--- a/indes.html
+++ b/indes.html
@@ -27,7 +27,13 @@
               </ul>
         </nav>
     </header>
-    <article></article>
+    <article>
+        <div class="container">
+            <h1>Pagina de botstrap</h1>
+            <p>Bootstrap es un frawework front end utilizado para desarrollar aplicaciones WEB y sitios mobile firts, o sea, con un layout que se adapta a la pantalla del dispositivo utilizado por el usuario
+            </p>
+        </div>
+    </article>
     <footer></footer>
 
 </body>
